objects/APTS_Target_CustomerWholesaler__c.object
<CustomObject>
    <fields>
        <fullName>Country1__c</fullName>
        <globalPicklist>Country</globalPicklist>
        <label>Country</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CountryWholesalerCustomerCombination__c</fullName>
        <label>Country-Wholesaler-Customer Combination</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Target Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.IsWholesaler__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Target Discounts (Customer)</relationshipLabel>
        <relationshipName>Wholesaler_Customer_Info1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Wholesaler__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Wholesaler</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Account needs to be a buying account (direct)</errorMessage>
            <filterItems>
                <field>Account.IsWholesaler__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.BillingCountryCode</field>
                <operation>equals</operation>
                <value>IT</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Target Discounts (Wholesaler)</relationshipLabel>
        <relationshipName>Wholesaler_Customer_Info</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Target Discount</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country1__c</columns>
        <columns>Wholesaler__c</columns>
        <columns>Customer__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>WC-{0000}</displayFormat>
        <label>WhCustID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Target Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>